--- a/src/components/Portfolio/About.css
+++ b/src/components/Portfolio/About.css
@@ -94,7 +94,7 @@
 .Work-image p{
     padding-left: 166px;
     font-family: MidnightBlack;
-    color: #414a4c;
+    color: black;
     font-style: oblique;
     font-size: 16px;
     margin: 0 12px;
