--- a/src/components/Portfolio/Projects.css
+++ b/src/components/Portfolio/Projects.css
@@ -25,6 +25,7 @@
     font-family: MagicalNight;
     font-size: 48px;
     margin-left: 12px;
+    height: 75px;    
 }
 
 .introduction{
